- fix status filter position on IE

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -10,6 +10,8 @@
   height: 35px;
   white-space: nowrap;
 /*  border: 1px solid #cccccc; */
+  /* css hack for IE */
+  width: expression((parseInt(document.documentElement.clientWidth)-400)+'px');
 }
 
 #messagetoolbar a
